--- a/k8s/registry/registry-proxy-ds.yml
+++ b/k8s/registry/registry-proxy-ds.yml
@@ -25,6 +25,6 @@ spec:
         - name: REGISTRY_PORT
           value: "5000"
         ports:
-        - name: registry
+        - protocol: TCP
           containerPort: 80
           hostPort: 5000     
